# ReadoutCard

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README  README.md  crorc_template.cfg  crorc_template.json  cru_template.cfg  cru_template.json  o2-roc-fw-list.json  roc_example.cfg
src/: BarInterfaceBase.cxx  BarInterfaceBase.h  BarWrapper.cxx  BarWrapper.h  BufferManager.h  BufferProvider.h  BufferProviderFile.h  BufferProviderMemory.h  BufferProviderNull.h  CMakeLists.txt  CardConfigurator.cxx  CardConfigurator.h  CardDescriptor.h  CardDummy.cxx  CardFactory.cxx  CardFinder.cxx  CardPdaBase.cxx  CardPdaBase.h  CardPdaCrorc.cxx  CardPdaCrorc.h  CardType.cxx  ChannelBase.cxx  ChannelBase.h  ChannelFactory.cxx  ChannelMaster.cxx  ChannelMaster.h  ChannelMasterBase.cxx  ChannelMasterBase.h  ChannelMasterFactory.cxx  ChannelMasterPdaBase.cxx  ChannelMasterPdaBase.h  ChannelParameters.cxx  ChannelParameters.h  ChannelPaths.cxx  ChannelPaths.h  ChannelSlave.cxx  ChannelSlave.h  ChannelUtilityImpl.cxx  ChannelUtilityImpl.h  ChannelUtilityInterface.h  (+90 more)
src/CommandLineUtilities/: AliceLowlevelFrontend.h  BarHammer.h  Common.cxx  Common.h  Description.h  Options.cxx  Options.h  Program.cxx  Program.h  ProgramAliceLowlevelFrontendClient.cxx  ProgramAliceLowlevelFrontendServer.cxx  ProgramBarStress.cxx  ProgramCleanup.cxx  ProgramConfig.cxx  ProgramCruBlink.cxx  ProgramCruExperimentalDma.cxx  ProgramCtpEmulator.cxx  ProgramDmaBench.cxx  ProgramFirmwareCheck.cxx  ProgramFlash.cxx  ProgramFlashRead.cxx  ProgramListCards.cxx  ProgramLoopback.cxx  ProgramMetrics.cxx  ProgramOnuStatus.cxx  ProgramPacketMonitor.cxx  ProgramPatternPlayer.cxx  ProgramPrintFifo.cxx  ProgramRegisterModify.cxx  ProgramRegisterRead.cxx  ProgramRegisterReadRange.cxx  ProgramRegisterWrite.cxx  ProgramReset.cxx  ProgramRunScript.cxx  ProgramSanityCheck.cxx  ProgramSiuStatus.cxx  ProgramStatus.cxx  ProgramSwtStress.cxx  ProgramTriggerMonitor.cxx  ProgramUserLogic.cxx  (+2 more)
src/CommandLineUtilities/AliceLowlevelFrontend/: AlfException.h  AliceLowlevelFrontend.h  ProgramAlfScaWriteSequence.cxx  ProgramAliceLowlevelFrontendClient.cxx  ProgramAliceLowlevelFrontendServer.cxx  README.md  Sca.cxx  Sca.h  ServiceNames.cxx  ServiceNames.h
src/Crorc/: Common.h  Constants.h  Crorc.cxx  Crorc.h  CrorcBar.cxx  CrorcBar.h  CrorcChannelMaster.cxx  CrorcChannelMaster.h  CrorcChannelSlave.cxx  CrorcChannelSlave.h  CrorcDmaChannel.cxx  CrorcDmaChannel.h  DdlDef.h  README.md  ReadyFifo.h  Rorc.h  RxFreeFifoState.h  StWord.h
src/Cru/: BarAccessor.h  Common.cxx  Common.h  Constants.h  CruBar.cxx  CruBar.h  CruBarAccessor.h  CruChannelMaster.cxx  CruChannelMaster.h  CruChannelSlave.cxx  CruChannelSlave.h  CruDmaChannel.cxx  CruDmaChannel.h  CruFifoTable.h  CruRegisterIndex.h  DataFormat.h  DatapathWrapper.cxx  DatapathWrapper.h  Eeprom.cxx  Eeprom.h  FirmwareFeatures.h  Gbt.cxx  Gbt.h  I2c.cxx  I2c.h  PatternPlayer.cxx  PatternPlayer.h  README.md  Temperature.cxx  Temperature.h  Ttc.cxx  Ttc.h  cru_constants_populate.py  cru_table.py  out.out  pack_cru_core.vhd
src/Cru/register_maps/: Regmap_PLL2_240mhz_input_240mhz_output.h  Regmap_default_PLL2_40mhz_input_240mhz_output.h  Si5344-RevD-TFC_40-Registers.h  Si5345-RevD-_local_pll-oct-2024-320M-LPGBTCRU-Registers.h  Si5345-RevD_local_pll1_zdb-Registers.h  Si5345-RevD_local_pll2_zdb-Registers.h  Si5345-RevD_ttc_pll1_zdb-Registers.h  Si5345-RevD_ttc_pll2_zdb-Registers.h
src/DmaBufferProvider/: DmaBufferProviderInterface.h  FilePdaDmaBufferProvider.h  NullDmaBufferProvider.h  PdaDmaBufferProvider.h  README.md
src/Dummy/: DummyBar.cxx  DummyBar.h  DummyChannelMaster.cxx  DummyChannelMaster.h  DummyChannelSlave.cxx  DummyChannelSlave.h  DummyDmaChannel.cxx  DummyDmaChannel.h
src/Factory/: ChannelFactory.cxx  ChannelFactoryUtils.h  ChannelUtilityFactory.cxx  ChannelUtilityFactory.h
src/ParameterTypes/: Address.cxx  Clock.cxx  DataSource.cxx  DatapathMode.cxx  DownstreamData.cxx  GbtCounterType.cxx  GbtMode.cxx  GbtMux.cxx  GbtPatternMode.cxx  GbtStatsMode.cxx  GeneratorPattern.cxx  Hex.cxx  LoopbackMode.cxx  PciAddress.cxx  PciSequenceNumber.cxx  ReadoutMode.cxx  ResetLevel.cxx  SerialId.cxx
src/Pda/: Pda.cxx  Pda.h  PdaBar.cxx  PdaBar.h  PdaDevice.cxx  PdaDevice.h  PdaDmaBuffer.cxx  PdaDmaBuffer.h  PdaLock.h  README.md  Util.h
src/RorcUtilities/: RorcUtilsCleanup.cxx  RorcUtilsCommon.h  RorcUtilsCruBlink.cxx  RorcUtilsCruExperimentalDma.cxx  RorcUtilsDmaBench.cxx  RorcUtilsInitChannel.cxx  RorcUtilsListCards.cxx  RorcUtilsOptions.cxx  RorcUtilsOptions.h  RorcUtilsPrintFifo.cxx  RorcUtilsProgram.cxx  RorcUtilsProgram.h  RorcUtilsReadRegister.cxx  RorcUtilsReadRegisterRange.cxx  RorcUtilsSanityCheck.cxx  RorcUtilsWriteRegister.cxx
src/Sca/: Sca.cxx  Sca.h
src/Swt/: Swt.cxx  Swt.h  SwtWord.h
src/Utilities/: AliceLowlevelFrontend.cxx  AliceLowlevelFrontend.h  Common.cxx  Common.h  ConvertAssign.h  Enum.h  GuardFunction.h  Hugetlbfs.cxx  Hugetlbfs.h  Iommu.cxx  Iommu.h  Map.h  MemoryMaps.cxx  MemoryMaps.h  Numa.cxx  Numa.h  Options.cxx  Options.h  Program.cxx  Program.h  ProgramAliceLowlevelFrontendClient.cxx  ProgramAliceLowlevelFrontendServer.cxx  ProgramCleanup.cxx  ProgramCruBlink.cxx  ProgramCruExperimentalDma.cxx  ProgramCruExperimentalDmaV2.cxx  ProgramDmaBench.cxx  ProgramInitChannel.cxx  ProgramListCards.cxx  ProgramPrintFifo.cxx  ProgramRegisterRead.cxx  ProgramRegisterReadRange.cxx  ProgramRegisterWrite.cxx  ProgramReset.cxx  ProgramRunScript.cxx  ProgramSanityCheck.cxx  README.md  SmartPointer.h  SuffixNumber.cxx  SuffixNumber.h  (+5 more)
src/c/: CMakeLists.txt
src/c/interface/: header.h  header_common.c  header_crorc.c  header_cru.c  (+1 more)
src/folly/: ProducerConsumerQueue.h
test/: CMakeLists.txt  TestBarAccessor.cxx  TestChannelFactoryUtils.cxx  TestChannelPaths.cxx  TestCruBar.cxx  TestCruDataFormat.cxx  TestEnums.cxx  TestFileSharedObject.cxx  TestInterprocessLock.cxx  TestMemoryMappedFile.cxx  TestPageManager.cxx  TestParameters.cxx  TestPciAddress.cxx  TestProgramOptions.cxx  TestRorc.cxx  TestRorcException.cxx  TestSuperpageQueue.cxx  TestSuperpageQueue.h  TestUtil.cxx
(+122 files in other folders)
